# SETU

./: .firebaserc  .gitignore  DEMO_NARRATIVE.md  Makefile  README.md  Setu_concept.md  firebase.json  firestore.rules
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: dispatch_repo.py  firestore_client.py  needcard_repo.py  volunteer_repo.py
backend/app/models/: dispatch.py  needcard.py  volunteer.py
backend/app/prompts/: brief_v1.txt  extraction_v1.txt
backend/app/routers/: brief.py  dispatch.py  health.py  image_intake.py  intake.py  needcards.py  text_intake.py
backend/app/routers/channels/: image_channel.py  text_channel.py  voice_channel.py  whatsapp_channel.py
backend/app/services/: brief_service.py  delivery_service.py  extraction_service.py  gemini_ocr_service.py  geo_service.py  intake_service.py  whisper_service.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_brief.py  test_channels.py  test_extraction.py  test_health.py  test_image_intake.py  test_models.py  test_voice_intake.py
backend/tests/eval/: brief_eval_set.json  extraction_eval_set.json  run_brief_eval.py  run_extraction_eval.py
backend/tests/integration/: test_whisper_real.py
frontend/: .env.example  eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: NeedCardComponent.tsx
frontend/src/lib/: api.ts  firebase.ts  (+2 more)
infra/cloudrun/: service.yaml
infra/firebase/: firestore.indexes.json
(+4 files in other folders)
